unpackaged/objects/Sales_History__c.object
<CustomObject>
  <fields>
    <fullName>Product_Group_1__c</fullName>
    <formula>IF(CONTAINS(Product__r.RecordType.DeveloperName, "Local"), 
Product__r.GlobalSKUMapping__r.PG1_Code__c + " " +  Product__r.GlobalSKUMapping__r.PG1_Desc__c, 
Product__r.PG1_Code__c + " " +  Product__r.PG1_Desc__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Product Group 1</label>
    <type>Text</type>
  </fields>
  <fields>
    <fullName>Product_Group_2_Brand__c</fullName>
    <description>Concatenation of Product group 2, description and brand "II11 Implants - Astra Tech Implant System". Use in report - should not appear in any page layouts</description>
    <formula>IF(CONTAINS(Product__r.RecordType.DeveloperName, "Local"), 
Product__r.GlobalSKUMapping__r.PG2_Code__c  &amp;  " " &amp; Product__r.GlobalSKUMapping__r.PG2_Desc__c  &amp; " - " &amp;   Product__r.GlobalSKUMapping__r.Brand__c, 
Product__r.PG2_Code__c  &amp;  " " &amp; Product__r.PG2_Desc__c  &amp; " - " &amp;   Product__r.Brand__c)</formula>
    <inlineHelpText>Concatenation of Product group 2, description and brand "II11 Implants - Astra Tech Implant System". Use in report - should not appear in any page layouts</inlineHelpText>
    <label>Product Group 2 - Brand</label>
    <type>Text</type>
  </fields>
  <fields>
    <fullName>Product_Group_2__c</fullName>
    <formula>IF(CONTAINS(Product__r.RecordType.DeveloperName, "Local"), 
Product__r.GlobalSKUMapping__r.PG2_Code__c + " " +  Product__r.GlobalSKUMapping__r.PG2_Desc__c, 
Product__r.PG2_Code__c + " " +  Product__r.PG2_Desc__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Product Group 2</label>
    <type>Text</type>
  </fields>
  <fields>
    <fullName>Product_Group_3_OLD__c</fullName>
    <label>Product Group 3 OLD</label>
    <length>50</length>
    <type>Text</type>
  </fields>
  <fields>
    <fullName>Product_Group_3__c</fullName>
    <formula>IF(CONTAINS(Product__r.RecordType.DeveloperName, "Local"), 
Product__r.GlobalSKUMapping__r.PG3_Code__c + " " +  Product__r.GlobalSKUMapping__r.PG3_Desc__c, 
Product__r.PG3_Code__c + " " +  Product__r.PG3_Desc__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Product Group 3</label>
    <type>Text</type>
  </fields>
  <fields>
    <fullName>Product_Group_Changed_HQ_del__c</fullName>
    <description>Checks for differences in Product Structure and Article Description between Sales History Record and related Product record. If change is detected, then "Yes"</description>
    <formula>null</formula>
    <inlineHelpText>Checks for differences in Product Structure and Article Description between Sales History Record and related Product record. If change is detected, then "Yes"</inlineHelpText>
    <label>XXXProduct Group Changed (HQ)</label>
    <type>Text</type>
  </fields>
  <fields>
    <fullName>Product_Group_HQ__c</fullName>
    <description>Used only for Roll up summary fields and Formula fields, avoid to use it in reports</description>
    <label>Product Group 4 Code (HQ)</label>
    <length>50</length>
    <type>Text</type>
  </fields>
  <fields>
    <fullName>Product_Group__c</fullName>
    <formula>Product__r.PG4_Code__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>TBD Product Group 4 OLD</label>
    <type>Text</type>
  </fields>
  <fields>
    <fullName>Product_Line__c</fullName>
    <formula>IF(CONTAINS(Product__r.RecordType.DeveloperName, "Local"), 
Product__r.GlobalSKUMapping__r.Product_Line__c, 
Product__r.Product_Line__c)</formula>
    <inlineHelpText>Limited to products that has a definition in Movex, otherwise it will be N/A</inlineHelpText>
    <label>Product Line</label>
    <type>Text</type>
  </fields>
  <fields>
    <fullName>Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>A lookup field to Product object , we use SFDC ID to update this field</description>
    <label>Product Name</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Sales History</relationshipLabel>
    <relationshipName>Sales_History</relationshipName>
    <type>Lookup</type>
  </fields>
  <fields>
    <fullName>Purchasing_Contract_External_ID__c</fullName>
    <description>The External ID of the Purchasing Contract (or Voucher). Should not appear in any page layouts</description>
    <inlineHelpText>The External ID of the Purchasing Contract (or Voucher). Should not appear in any page layouts</inlineHelpText>
    <label>Purchasing Contract External ID</label>
    <length>255</length>
    <type>Text</type>
  </fields>
  <fields>
    <fullName>Quantity_Test__c</fullName>
    <label>Quantity Test</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
  </fields>
  <fields>
    <fullName>Quantity__c</fullName>
    <label>Quantity</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
  </fields>
  <fields>
    <fullName>READ_ME__c</fullName>
    <label>Read Me</label>
    <type>TextArea</type>
  </fields>
  <fields>
    <fullName>Record_Transfered_to_Another_Account__c</fullName>
    <description>This fields is for checking Data Quality. If this field = "1", it means that the Movex# doesn't corresponds and that the sales has been moved to another account (possibly through a merge). This gives errors in the integration.</description>
    <formula>IF( Account_Account_No__c  &lt;&gt;  Account__r.Movex__c , 1, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>This fields is for checking Data Quality. If this field = "1", it means that the Movex# doesn't corresponds and that the sales has been moved to another account (possibly through a merge). This gives errors in the integration.</inlineHelpText>
    <label>Record Transfered to Another Account?</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
  </fields>
  <fields>
    <fullName>Remake_For_analysis_only__c</fullName>
    <description>Returns Quantity if this is Invoice line is a Remake or else 0. Used only for Atlantis sales</description>
    <formula>IF( AND(CONTAINS( Name , "R"), LEFT( Product_Group_1__c , 2)="ID2" ) ,   Quantity__c , 0)</formula>
    <inlineHelpText>Returns Quantity if this is Invoice line is a Remake or else 0. Used only for Atlantis sales. Used for analysis</inlineHelpText>
    <label>Remake? (For analysis only)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
  </fields>
  <fields>
    <fullName>Returned_Prod__c</fullName>
    <formula>if  (Quantity__c  &lt; 0 , "Returned Prod" , "Shipped Prod")</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Returned Prod</label>
    <type>Text</type>
  </fields>
  <fields>
    <fullName>SBU__c</fullName>
    <description>Strategic Business Unit</description>
    <formula>IF(CONTAINS(Product__r.RecordType.DeveloperName, "Local"), 
Product__r.GlobalSKUMapping__r.SBU_Code__c + " " + Product__r.GlobalSKUMapping__r.SBU_Name__c, 
Product__r.SBU_Code__c + " " + Product__r.SBU_Name__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Strategic Business Unit</inlineHelpText>
    <label>SBU Name</label>
    <type>Text</type>
  </fields>
  <fields>
    <fullName>SIMPLANT_Guide_Type__c</fullName>
    <description>Linked to Attribute 1 in Movex</description>
    <inlineHelpText>Surgical Guide Type - CLassic, Pilot, Safe, Univ</inlineHelpText>
    <label>SIMPLANT Guide Type</label>
    <length>18</length>
    <type>Text</type>
  </fields>
  <fields>
    <fullName>SIMPLANT_Sales_Category_HQ__c</fullName>
    <description>Important field to build reports on SIMPLANT sales, just filter on this field by using these different values : Licenses, Maintenance, Guides, Conversion, Value Pack, Vouchers, Hardware, Guides (Old), Licenses (Old).</description>
    <formula>IF(CONTAINS(Product__r.RecordType.DeveloperName, "Local"), 
IF (  Business_Area_Code__c ="DD2", IF ( NOT(ISBLANK(Product__r.GlobalSKUMapping__r.SIMPLANT_Product_Category_HQ__c)) ,Product__r.GlobalSKUMapping__r.SIMPLANT_Product_Category_HQ__c,

CASE( Product__r.GlobalSKUMapping__r.PG3_Code__c , 
"ID820", "Licenses",
"ID821", "Maintenance",
"ID822", "Guides",
"ID823", "Conversion",
"ID824", "Value Pack",
"ID825", "Vouchers", 
"ID826", "Hardware", 
"ID851", "Hardware", 
"ID852", "Hardware",
"ID811", "Guides (Old)",
"ID853", "Guides (Old)",
"ID861", "Licenses (Old)",

"Others")),


"Non Simplant"), 
IF (  Business_Area_Code__c ="DD2", IF ( NOT(ISBLANK(Product__r.SIMPLANT_Product_Category_HQ__c)) ,Product__r.SIMPLANT_Product_Category_HQ__c,

CASE( Product__r.PG3_Code__c , 
"ID820", "Licenses",
"ID821", "Maintenance",
"ID822", "Guides",
"ID823", "Conversion",
"ID824", "Value Pack",
"ID825", "Vouchers", 
"ID826", "Hardware", 
"ID851", "Hardware", 
"ID852", "Hardware",
"ID811", "Guides (Old)",
"ID853", "Guides (Old)",
"ID861", "Licenses (Old)",

"Others")),


"Non Simplant")
)</formula>
    <label>SIMPLANT Sales Category HQ</label>
    <type>Text</type>
  </fields>
  <fields>
    <fullName>SWmaint_Value__c</fullName>
    <description>Used to show unearned revenue of Vouchers Package and Maintenance fees</description>
    <inlineHelpText>Used to show unearned revenue of Vouchers Package and Maintenance fees</inlineHelpText>
    <label>Unearned Revenue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
  </fields>
  <fields>
    <fullName>Sales_Attribute_1__c</fullName>
    <label>Sales Attribute 1</label>
    <length>50</length>
    <type>Text</type>
  </fields>
  <fields>
    <fullName>Sales_Attribute_2__c</fullName>
    <label>Sales Attribute 2</label>
    <length>50</length>
    <type>Text</type>
  </fields>
  <fields>
    <fullName>Sales_Attribute_3__c</fullName>
    <label>Sales Attribute 3</label>
    <length>50</length>
    <type>Text</type>
  </fields>
  <fields>
    <fullName>Sales_History_External_ID__c</fullName>
    <description>Used to get a unique reference number. Based on CustomerPrefix+InvoiceDate+InvoiceNumber+LineNumber+CustomerOrderNumber+DeliveryIndex(Only M3)+ERPId+CompanyCode. Used for Upserts, should not be visible</description>
    <externalId>true</externalId>
    <inlineHelpText>Used to get a unique reference number. Based on CustomerPrefix+InvoiceDate+InvoiceNumber+LineNumber+CustomerOrderNumber+DeliveryIndex(Only M3)+ERPId+CompanyCode. Used for Upserts, should not be visible</inlineHelpText>
    <label>Sales History External ID</label>
    <length>100</length>
    <type>Text</type>
    <unique>true</unique>
  </fields>
  <fields>
    <fullName>Sales_History_HQ__c</fullName>
    <formula>1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sales History # (HQ)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
  </fields>
  <fields>
    <fullName>Sales_Owner_Salesman_ID_HQ__c</fullName>
    <description>Used for verification. Should not appear on any screens</description>
    <inlineHelpText>Used for verification. Should not appear on any screens</inlineHelpText>
    <label>Sales Owner Salesman ID (HQ)</label>
    <length>10</length>
    <type>Text</type>
  </fields>
  <fields>
    <fullName>Sales_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The Person who should get credit for the sale. Note that if this individual can not be tracked in Salesforce, the owner of the Account will be set as Sales Owner</description>
    <inlineHelpText>The Person who should get credit for the sale. Note that if this individual can not be tracked in Salesforce, the owner of the Account will be set as Sales Owner</inlineHelpText>
    <label>Sales Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Sales_History</relationshipName>
    <type>Lookup</type>
  </fields>
  <fields>
    <fullName>Sales_in_year_of_implants_won_date__c</fullName>
    <description>This field is used for i.e asp analytics on sales to recently won customer. should not be available in reports or page layout</description>
    <formula>IF( YEAR( Account__r.LastWonEventYearMonth_Implants__c )= YEAR( Invoice_Date__c )  , True, false)</formula>
    <inlineHelpText>This field is used for i.e asp analytics on sales to recently won customer. should not be available in reports or page layout</inlineHelpText>
    <label>Sales in year of implants won date?</label>
    <type>Checkbox</type>
  </fields>
  <fields>
    <fullName>Sales_within_12M_after_Implants_Won_Date__c</fullName>
    <description>This field is checked if the sales occured within 365 days after the Implants won date</description>
    <formula>IF( Account__r.LastWonEventYearMonth_Implants__c &lt;= Invoice_Date__c  &amp;&amp; Account__r.LastWonEventYearMonth_Implants__c +365  &gt;=  Invoice_Date__c , True, False)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>This field is checked if the sales occured within 365 days after the Implants won date</inlineHelpText>
    <label>Sales within 12M after Implants Won Date</label>
    <type>Checkbox</type>
  </fields>
  <fields>
    <fullName>Tot_Price__c</fullName>
    <formula>IF( Quantity__c =0,  Price__c , Price__c *  Quantity__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Total Value =  Quantity multiplied by the Price</inlineHelpText>
    <label>Total Price (Currency)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
  </fields>
  <fields>
    <fullName>Total_Deferred_Revenue__c</fullName>
    <description>Calculates 1/12 the value of unearned revenue and multiple it by the number of passed months. BETA- not to show for reps</description>
    <formula>IF (SWmaint_Value__c &lt;&gt;0 &amp;&amp;  Product_Group_3__c ="ID821 Simplant software Maintenance", 

(

(SWmaint_Value__c/12) * Floor((Today()-Invoice_Date__c )/ 30.25)

),0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Calculates 1/12 the value of unearned revenue and multiple it by the number of passed months. BETA- not to show for reps</inlineHelpText>
    <label>Total Deferred Revenue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
  </fields>
  <fields>
    <fullName>Total_ISUS_Implant_Connections__c</fullName>
    <formula>(IF( ISUS_Prostheses__c = "Yes",  VALUE(RIGHT( Name ,  LEN(TRIM(Name))-FIND("-",  Name) )) , 0)) *  Quantity__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total ISUS Implant Connections</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
  </fields>
  <fields>
    <fullName>Total_Value__c</fullName>
    <description>Total value is a numerice field that is the equivalent to the currency field Total Price. It is used to track local currency or multiple currencies in reports. Should not appear in any page layouts</description>
    <formula>Tot_Price__c</formula>
    <inlineHelpText>Total value is a numerice field that is the equivalent to the currency field Total Price. It is used to track local currency or multiple currencies in reports. Should not appear in any page layouts</inlineHelpText>
    <label>Total Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
  </fields>
  <fields>
    <fullName>UseCase__c</fullName>
    <description>Groups ATL Implant sales into use cases DI Implant Systems and Competitive Implant Systems.</description>
    <formula>CASE(Implant_system__c, 
  "BioHorizons", "Comp System", 
  "Biomet 3i", "Comp System", 
  "Camlog", "Comp System", 
  "Keystone Dental", "Comp System", 
  "Nobel Biocare", "Comp System", 
  "Straumann", "Comp System", 
  "Sybron Implant Solutions", "Comp System", 
  "Zimmer Dental", "Comp System", 
  "Ankylos (D)", "DI System", 
  "Astra Tech (D)", "DI System", 
  "XiVE/Frialit (D)", "DI System", 
  "N/A" 
)</formula>
    <inlineHelpText>Groups ATL Implant sales into use cases DI Implant Systems and Competitive Implant Systems.</inlineHelpText>
    <label>ATL Implant Use Case</label>
    <type>Text</type>
  </fields>
  <fields>
    <fullName>Voucher_Expiry_Date__c</fullName>
    <description>Manual input by subsidiaries, the data originated in SoftAdmin</description>
    <inlineHelpText>Manual input by subsidiaries, the data originated in SoftAdmin</inlineHelpText>
    <label>Voucher Expiry Date</label>
    <type>Date</type>
  </fields>
  <fields>
    <fullName>Voucher_Validity__c</fullName>
    <description>Valid :Can be used to purchase more guides
Processed: Can't be used.
updated manually by Leuven</description>
    <inlineHelpText>Valid :Can be used to purchase more guides
Processed: Can't be used.</inlineHelpText>
    <label>Voucher Validity</label>
    <length>30</length>
    <type>Text</type>
  </fields>
  <fields>
    <fullName>Warranty_For_analysis_only__c</fullName>
    <description>Returns Quantity if this is Invoice line is a Warranty or else 0. Used only for Atlantis sales</description>
    <formula>IF( AND(CONTAINS( Name , "W"), LEFT( Product_Group_1__c , 2)="ID2" ) ,   Quantity__c  , 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Returns Quantity if this is Invoice line is a Warranty or else 0. Used only for Atlantis sales. For analysis</inlineHelpText>
    <label>Warranty? (For analysis only)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
  </fields>
  <fields>
    <fullName>WonLostCategory__c</fullName>
    <description>Used by the WonLost logic to determine the proper Product Category.</description>
    <formula>IF(CONTAINS(Product__r.RecordType.DeveloperName, "Local"), 
CASE( Product__r.GlobalSKUMapping__r.Product_Category__c,
  "Implants", "Implants",
  "Stock Abutments", "Stock Abutments",
  "Abutments", "Abutments",
  "ISUS Prostheses", "ISUS",
  "N/A"),

CASE( Product__r.Product_Category__c,
  "Implants", "Implants",
  "Stock Abutments", "Stock Abutments",
  "Abutments", "Abutments",
  "ISUS Prostheses", "ISUS",
  "N/A"
) 
)</formula>
    <label>WonLostCategory</label>
    <type>Text</type>
  </fields>
  <fields>
    <fullName>YTDperiod__c</fullName>
    <description>This field gets the value YTD (YEAR) - i.e YTD (2009) when the invoice line is within the YTD period. Otherwise it is blank. 
It is used to compare multiple YTD periods with each other. 
If this field is used in the filter criteria like this: "YTD Period not equal to blank" it means that you are comparing YTD figures.
This field should not appear in any page layouts</description>
    <formula>IF( TODAY() -  Invoice_Date__c   &lt; 0, "Error",  /* Invoice date appears in the future */
    IF( YEAR( Invoice_Date__c ) =   YEAR( TODAY() ) , TRIM(" YTD (" &amp;  TEXT(YEAR( Invoice_Date__c ))  &amp; ")"), /*Invoice date appears this year within the YTD scope */
       IF( 
 YEAR(Invoice_Date__c)  &lt; YEAR(TODAY())   &amp;&amp; ( MONTH(Invoice_Date__c)&lt; MONTH(TODAY())   || ( MONTH(Invoice_Date__c)= MONTH(TODAY())   &amp;&amp;   DAY(Invoice_Date__c) &lt;=  DAY(TODAY())   )) 

 


 , TRIM(" YTD (" &amp; TEXT(YEAR( Invoice_Date__c ))  &amp; ")"), /*Invoice date appears in previous year within the YTD scope */

"") ) ) /*Invoice date appears outside of the YTD scope */</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>This field gets the value YTD (YEAR) - i.e YTD (2009) when the invoice line is withing the YTD period. Otherwise it is blank. 
It is used to compare multiple YTD periods with each other.</inlineHelpText>
    <label>YTD period</label>
    <type>Text</type>
  </fields>
  <fields>
    <fullName>YrMonth__c</fullName>
    <label>YrMonth</label>
    <length>10</length>
    <type>Text</type>
  </fields>
  <fields>
    <fullName>friadent_temp_remove__c</fullName>
    <formula>IF( CONTAINS( Sales_History_External_ID__c , " ") ,1, 0)</formula>
    <label>friadent temp remove</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
  </fields>
  <fields>
    <fullName>is_is_the_primary_contract_external_id__c</fullName>
    <description>The external ID of the Contract or Voucher if that exists</description>
    <externalId>true</externalId>
    <label>is is the primary contract external id</label>
    <length>255</length>
    <type>Text</type>
  </fields>
  <label>Sales History</label>
  <listViews>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Article_Description__c</columns>
    <columns>Invoice_Date__c</columns>
    <columns>Invoice_Number__c</columns>
    <columns>Quantity__c</columns>
    <columns>Price__c</columns>
    <columns>Account__c</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
      <field>Country_Code__c</field>
      <operation>equals</operation>
      <value>DE</value>
    </filters>
    <label>All</label>
  </listViews>
  <listViews>
    <fullName>ITcheck</fullName>
    <columns>Invoice_Date__c</columns>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Product__c</columns>
    <columns>Quantity__c</columns>
    <columns>Price__c</columns>
    <columns>Tot_Price__c</columns>
    <columns>Sales_Owner__c</columns>
    <columns>Account_Account_No__c</columns>
    <columns>Order_Type__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
      <field>CREATED_DATE</field>
      <operation>greaterOrEqual</operation>
      <value>TODAY</value>
    </filters>
    <filters>
      <field>Country_Code__c</field>
      <operation>equals</operation>
      <value>NL,BE,LU</value>
    </filters>
    <label>NL Check</label>
    <language>en_US</language>
    <sharedTo>
      <role>Dentsply_IH_CEO</role>
    </sharedTo>
  </listViews>
  <listViews>
    <fullName>Yesterday_Sales</fullName>
    <columns>Invoice_Date__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>NAME</columns>
    <columns>Account_Account_No__c</columns>
    <columns>Product__c</columns>
    <columns>Product_Group_4__c</columns>
    <columns>Quantity__c</columns>
    <columns>Price__c</columns>
    <columns>Tot_Price__c</columns>
    <columns>Country_Code__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
      <field>CREATED_DATE</field>
      <operation>greaterOrEqual</operation>
      <value>YESTERDAY</value>
    </filters>
    <label>Yesterday's Sales</label>
    <language>en_US</language>
  </listViews>
  <nameField>
    <label>Article (SKU)</label>
    <type>Text</type>
  </nameField>
  <pluralLabel>Sales History</pluralLabel>
  <sharingModel>ControlledByParent</sharingModel>
</CustomObject>